examples/test/testpolicy14617.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14617
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key12: value28
      key43: value48
      key41: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value12
      podSelector:
        matchLabels:
          key11: value18
